force-app/main/default/objects/Rate_List__c/Rate_List__c.object-meta.xml
<CustomObject>
    <description>Rates for Partner Agreement Documents</description>
    <label>Partner Rate List</label>
    <nameField>
        <label>Rate List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Rate Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>