force-app/main/default/objects/Rate_List__c/fields/AMEX_Travel_Card_Reload__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Travel_Card_Reload__c</fullName>
    <label>AMEX Travel Card Reload</label>
    <length>10</length>
    <type>Text</type>
</CustomField>