force-app/main/default/objects/Rate_List__c/fields/ByPassValidation__c.field-meta.xml
<CustomField>
    <fullName>ByPassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to bypass validation in Apex RateListTriggerHandler_Test</description>
    <label>ByPassValidation</label>
    <type>Checkbox</type>
</CustomField>