force-app/main/default/objects/Rate_List__c/fields/Change_Address__c.field-meta.xml
<CustomField>
    <fullName>Change_Address__c</fullName>
    <label>Change Address</label>
    <length>10</length>
    <type>Text</type>
</CustomField>