force-app/main/default/objects/Rate_List__c/fields/EPOS_Digital_Camera__c.field-meta.xml
<CustomField>
    <fullName>EPOS_Digital_Camera__c</fullName>
    <label>EPOS Digital Camera</label>
    <length>10</length>
    <type>Text</type>
</CustomField>