force-app/main/default/objects/Rate_List__c/fields/Fax_Post_Lodgement__c.field-meta.xml
<CustomField>
    <fullName>Fax_Post_Lodgement__c</fullName>
    <label>Fax Post Lodgement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>