force-app/main/default/objects/Rate_List__c/fields/Franking_Machines__c.field-meta.xml
<CustomField>
    <fullName>Franking_Machines__c</fullName>
    <label>Franking Machines</label>
    <length>10</length>
    <type>Text</type>
</CustomField>