force-app/main/default/objects/Rate_List__c/fields/Mail_Mngmnt_PDO_over_600__c.field-meta.xml
<CustomField>
    <fullName>Mail_Mngmnt_PDO_over_600__c</fullName>
    <label>Mail Mngmnt PDO over 600</label>
    <length>10</length>
    <type>Text</type>
</CustomField>