force-app/main/default/objects/Rate_List__c/fields/Money_Orders_Bulk__c.field-meta.xml
<CustomField>
    <fullName>Money_Orders_Bulk__c</fullName>
    <label>Money Orders Bulk</label>
    <length>10</length>
    <type>Text</type>
</CustomField>