force-app/main/default/objects/Rate_List__c/fields/Parcel_Collect_Scanned_Item__c.field-meta.xml
<CustomField>
    <fullName>Parcel_Collect_Scanned_Item__c</fullName>
    <label>Parcel Collect Scanned Item</label>
    <length>10</length>
    <type>Text</type>
</CustomField>