force-app/main/default/objects/Rate_List__c/fields/Postpoint_Small_Unit__c.field-meta.xml
<CustomField>
    <fullName>Postpoint_Small_Unit__c</fullName>
    <label>Postpoint Small Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>