force-app/main/default/objects/Rate_List__c/fields/Process_BulkMM_Sort_Place__c.field-meta.xml
<CustomField>
    <fullName>Process_BulkMM_Sort_Place__c</fullName>
    <label>Process BulkMM Sort Place</label>
    <length>10</length>
    <type>Text</type>
</CustomField>