force-app/main/default/objects/Rate_List__c/fields/Scanning_Fee__c.field-meta.xml
<CustomField>
    <fullName>Scanning_Fee__c</fullName>
    <label>Scanning Fee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>