force-app/main/default/objects/Rate_List__c/fields/Spotters_Fee__c.field-meta.xml
<CustomField>
    <fullName>Spotters_Fee__c</fullName>
    <label>Spotters Fee</label>
    <length>10</length>
    <type>Text</type>
</CustomField>