force-app/main/default/objects/Rate_List__c/fields/Tray_despatch_fee_loading_25__c.field-meta.xml
<CustomField>
    <fullName>Tray_despatch_fee_loading_25__c</fullName>
    <label>Tray despatch fee loading 25%</label>
    <length>10</length>
    <type>Text</type>
</CustomField>