force-app/main/default/objects/Rate_List__c/fields/WWC_VIC__c.field-meta.xml
<CustomField>
    <fullName>WWC_VIC__c</fullName>
    <label>WWC VIC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>