force-app/main/default/objects/Rate_List__c/recordTypes/CMA.recordType-meta.xml
<RecordType>
    <fullName>CMA</fullName>
    <active>true</active>
    <description>Rates for CMA Licence Type Partner Agreement Documents</description>
    <label>CMA</label>
</RecordType>