force-app/main/default/objects/Rate_List__c/recordTypes/CPA.recordType-meta.xml
<RecordType>
    <fullName>CPA</fullName>
    <active>true</active>
    <description>Rates for CPA Licence Type Partner Agreement Documents</description>
    <label>CPA</label>
</RecordType>