force-app/main/default/objects/Rate_List__c/recordTypes/LPO.recordType-meta.xml
<RecordType>
    <fullName>LPO</fullName>
    <active>true</active>
    <description>Rates for LPO Licence Type Partner Agreement Documents</description>
    <label>LPO</label>
</RecordType>