force-app/main/default/objects/Rate_List__c/recordTypes/PP.recordType-meta.xml
<RecordType>
    <fullName>PP</fullName>
    <active>true</active>
    <description>Rates for Postpoint Licence Type Partner Agreement Documents</description>
    <label>PP</label>
</RecordType>