force-app/main/default/objects/Rate_List__c/validationRules/Lock_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record</fullName>
    <active>true</active>
    <description>Ensure the when the field Lock Record is set to true, that the record can not be updated.  ISNEW condition has been added to allow clone to proceed.  The flag is set to true on Approval, and unset when cloned.</description>
    <errorConditionFormula>Lock_Record__c = true
&amp;&amp;NOT((PRIORVALUE( Lock_Record__c ))=false) &amp;&amp;  NOT(ISNEW())</errorConditionFormula>
    <errorMessage>The Rate List record can not be updated when in status Approved, Active, and Superseded.</errorMessage>
</ValidationRule>