force-app/main/default/objects/Rate_List__c/listViews/All_Active_Rates.listView-meta.xml
<ListView>
    <fullName>All_Active_Rates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Rates</label>
</ListView>