force-app/main/default/objects/Rate_List__c/listViews/All_LPO_Rate_Lists.listView-meta.xml
<ListView>
    <fullName>All_LPO_Rate_Lists</fullName>
    <columns>NAME</columns>
    <columns>Licence_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rate_List__c.LPO</value>
    </filters>
    <label>All LPO Rate Lists</label>
</ListView>